--- a/css/style.scss
+++ b/css/style.scss
@@ -5,5 +5,6 @@
 @import "bootstrap/bootstrap";
 $fa-font-path: "font";
 @import "font-awesome/font-awesome";
+@import "font-awesome/academicons.scss";
 @import "katex";
 @import "solarized";
