--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,6 @@
 @import "bootstrap/bootstrap";
 $fa-font-path: "font";
 @import "font-awesome/font-awesome";
-@import "font-awesome/academicons.scss";
+@import "https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css";
 @import "katex";
 @import "solarized";
