--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -42,8 +42,8 @@ layout: default
 		</div>
 		<div class="pad-left note">
 			<div class="smallspacer"></div>
-			<!-- <i class="fa fa-book fa-fw"></i> -->
-			<i class="ai ai-google-scholar ai-1x "></i>
+			<i class="fa fa-book fa-fw"></i>
+			<!-- <i class="ai ai-google-scholar ai-1x "></i> -->
 			<a class="off" href="http://scholar.google.com/citations?user={{ member.scholar }}">{{ member.title }}</a>
 		</div>
 		<div class="bigspacer"></div>
@@ -78,6 +78,18 @@ layout: default
 			<div class="smallspacer"></div>
 			<i class="fa fa-twitter fa-fw"></i>
 			<a class="off" href="https://twitter.com/{{ member.twitter }}">{{ member.twitter }}</a>
+		</div>
+		<div class="bigspacer"></div>
+		{% endif %}
+		{% if member.orcid %}
+		<div class="smallhead">
+			ORCID
+		</div>
+		<div class="pad-left note">
+			<div class="smallspacer"></div>
+			<i class="fa fa-id-card fa-fw"></i>
+			<!-- <i class="ai ai-orcid ai-1x "></i> -->
+			<a class="off" href="https://orcid.org/{{ member.orcid }}">{{ member.orcid }}</a>
 		</div>
 		<div class="bigspacer"></div>
 		{% endif %}
