--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -42,7 +42,8 @@ layout: default
 		</div>
 		<div class="pad-left note">
 			<div class="smallspacer"></div>
-			<i class="fa fa-book fa-fw"></i>
+			<!-- <i class="fa fa-book fa-fw"></i> -->
+			<i class="fa fa-graduation-cap fa-fw"></i>
 			<!-- <i class="ai ai-google-scholar ai-1x "></i> -->
 			<a class="off" href="http://scholar.google.com/citations?user={{ member.scholar }}">{{ member.title }}</a>
 		</div>
@@ -54,7 +55,7 @@ layout: default
 		</div>
 		<div class="pad-left note">
 			<div class="smallspacer"></div>
-			<i class="fa fa-github-alt fa-fw"></i>
+			<i class="fa fa-github fa-fw"></i>
 			<a class="off" href="https://github.com/{{ member.github }}">{{ member.github }}</a>
 		</div>
 		<div class="bigspacer"></div>
