--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
 			<div class="container">
 				{% if page.categories.first != 'home' %}
 				<a class="navbar-brand" href="/">
-					<img class="logo navbar-brand d-inline-block align-top ml-0 mr-1" src="/images/logo.svg">
+					<img class="logo navbar-brand d-inline-block align-top ml-0 mr-1" src="/images/logo2.svg">
 					Li Research Lab
 				</a>
 				{% else %}
