--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
 <body>
 
 	<div id="header">
-		<nav class="navbar navbar-expand-md navbar-light bg-navbar">
+		<nav class="navbar navbar-expand-lg navbar-light bg-navbar">
 			<div class="container">
 				{% if page.categories.first != 'home' %}
 				<a class="navbar-brand" href="/">
