--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -45,7 +45,7 @@ layout: default
 			<!-- <i class="fa fa-book fa-fw"></i> -->
 			<i class="fa fa-graduation-cap fa-fw"></i>
 			<!-- <i class="ai ai-google-scholar ai-1x "></i> -->
-			<a class="off" href="http://scholar.google.com/citations?user={{ member.scholar }}">{{ member.title }}</a>
+			<a class="off" href="https://scholar.google.com/citations?user={{ member.scholar }}">{{ member.title }}</a>
 		</div>
 		<div class="bigspacer"></div>
 		{% endif %}
