--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,8 @@ layout: default
 			<div class="media">
 				<div class="media-body">
 					<div class="title media-heading">
-						<a href="{{ page.url }}" class="off">{{ page.title }}</a>
+						<!-- <a href="{{ page.url }}" class="off">{{ page.title }}</a> -->
+						{{ page.title }}
 					</div>
 					<p>
 					<div class="smallhead">
